<resources>
    <string name="app_name">ReitApp</string>
    <string name="title_activity_login">Einloggen</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="prompt_passwordConfirmation">Passwort bestätigen</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="action_sign_up">Benutzer erstellen</string>
    <string name="action_sign_in_short">Einloggen</string>
    <string name="action_sign_up_short">Benutzer erstellen</string>
    <string name="error_invalid_email">Falsche Email</string>
    <string name="error_invalid_password">Passwort zu kurz</string>
    <string name="error_incorrect_password">Falsches Passwort oder Email</string>
    <string name="error_incorrect_password_confirmed">Passwort stimmt nicht überein</string>
    <string name="error_field_required">Benötigtes Feld</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="activity_register">Neuen Benutzer anlegen</string>
    <string name="activity_user_label">Hauptmenü</string>
    <string name="activity_security_label">Datenschutz</string>
    <string name="activity_settings_label">Einstellungen</string>
    <string name="activity_statistics_label">Statistiken</string>
    <string name="action_logout">Ausloggen</string>
    <string name="loggedout_toast">Erfolgreich ausgeloggt</string>
    <string name="activity_tour_label">Tour auswählen</string>
    <string name="toast_show_tours_failed">Fehler beim Anzeigen der Touren!</string>
    <string name="toast_show_stats_failed">Fehler beim Anzeigen der Statistik</string>
    <string name="email_confirmation_error">Email stimmt nicht überein</string>
    <string name="email_confirmation">Email bestätigen</string>
    <string name="error_new_user">Fehler beim Anlegen eines neuen Benutzers</string>
    <string name="forgot_password_label">Passwort vergessen</string>
    <string name="change_password">Passwort ändern</string>
    <string name="newsletterdaten">Newsletterdaten</string>
    <string name="security_string">Die Betreiber dieser App nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.\n\nDie Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben.\n\nWir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.</string>
    <string name="newsletter_string">Wenn Sie den auf der Webseite angebotenen Newsletter beziehen möchten, benötigen wir von Ihnen eine E-Mail-Adresse sowie Informationen, welche uns die Überprüfung gestatten, dass Sie der Inhaber der angegebenen E-Mail-Adresse sind und mit dem Empfang des Newsletters einverstanden sind. Weitere Daten werden nicht erhoben. Diese Daten verwenden wir ausschließlich für den Versand der angeforderten Informationen und geben sie nicht an Dritte weiter.\n\nDie erteilte Einwilligung zur Speicherung der Daten, der E-Mail-Adresse sowie deren Nutzung zum Versand des Newsletters können Sie jederzeit in den Einstellungen widerrufen.</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_help">Hilfe</string>
    <string name="cancel">Abbrechen</string>
    <string name="login_canceld">Login abgebrochen</string>
</resources>
